--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ng-x-rocket",
-  "version": "1.0.0",
+  "name": "ng-x-learns",
+  "version": "1.0.1-beta1",
   "private": true,
   "scripts": {
     "ng": "ng",
     "build": "npm run env -s && ng build --prod",
     "start": "npm run env -s && ng serve --aot --proxy-config proxy.conf.js",
     "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
-    "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
+    "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss --config .stylelintrc && htmlhint \"src\" --config .htmlhintrc",
     "test": "npm run env -s && ng test",
     "test:ci": "npm run env -s && npm run lint -s && ng test --code-coverage --watch=false",
     "e2e": "npm run env -s && ng e2e",
@@ -30,22 +30,26 @@
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
-    "@ngx-translate/core": "^10.0.1",
     "@angular/service-worker": "^7.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
-    "bootstrap": "^4.1.1",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "@ngrx/effects": "^6.1.2",
+    "@ngrx/entity": "^6.1.2",
+    "@ngrx/store": "^6.1.2",
+    "@ngx-translate/core": "^10.0.1",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.6",
     "lodash": "^4.17.10",
     "rxjs": "^6.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.10.2",
     "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
-    "@angular-devkit/build-angular": "^0.10.2",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
+    "@ngrx/store-devtools": "^6.1.2",
     "@ngx-rocket/scripts": "^3.0.0",
     "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "^2.0.2",
@@ -55,6 +59,7 @@
     "hads": "^1.7.0",
     "htmlhint": "^0.10.0",
     "https-proxy-agent": "^2.0.0",
+    "husky": "^0.14.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "^4.1.0",
     "karma": "~3.0.0",
@@ -64,18 +69,17 @@
     "karma-jasmine": "^1.1.2",
     "karma-junit-reporter": "^1.2.0",
     "prettier": "^1.14.0",
-    "tslint-config-prettier": "^1.14.0",
-    "stylelint-config-prettier": "^4.0.0",
     "pretty-quick": "^1.6.0",
-    "husky": "^0.14.3",
     "protractor": "~5.4.0",
     "puppeteer": "^1.4.0",
     "stylelint": "~9.6.0",
+    "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-recommended-scss": "~3.2.0",
     "stylelint-config-standard": "~18.2.0",
     "stylelint-scss": "~3.3.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
+    "tslint-config-prettier": "^1.14.0",
     "typescript": "~3.1.3"
   },
   "prettier": {
