--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.2",
+    "@angular-devkit/build-ng-packagr": "~0.10.0",
     "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
@@ -70,6 +71,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.2",
     "karma-jasmine": "^1.1.2",
     "karma-junit-reporter": "^1.2.0",
+    "ng-packagr": "^4.2.0",
     "prettier": "^1.14.0",
     "pretty-quick": "^1.6.0",
     "protractor": "~5.4.0",
@@ -80,6 +82,8 @@
     "stylelint-config-standard": "~18.2.0",
     "stylelint-scss": "~3.3.0",
     "ts-node": "~7.0.1",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "tslint-config-prettier": "^1.14.0",
     "typescript": "~3.1.3"
