fix module hotkeys

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "ng": "ng",
-    "build": "npm run env -s && ng build --prod --aot",
+    "build": "npm run build:lib && npm run env -s && ng build --prod --aot",
     "start": "npm run env -s && ng serve --aot --proxy-config proxy.conf.js",
     "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss --config .stylelintrc && htmlhint \"src\" --config .htmlhintrc",
@@ -18,7 +18,8 @@
     "prettier:check": "prettier --list-different \"./{src,e2e}/**/*.{ts,js,scss}\"",
     "postinstall": "npm run prettier -s",
     "precommit": "pretty-quick --staged",
-    "generate": "ng generate"
+    "generate": "ng generate",
+    "build:lib": "npm install projects/ngx-hotkeys && ng build ngx-hotkeys"
   },
   "dependencies": {
     "@angular/animations": "^7.0.0",
@@ -42,6 +43,7 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.6",
     "lodash": "^4.17.10",
+    "ngx-hotkeys": "file:projects/ngx-hotkeys",
     "rxjs": "^6.3.1",
     "zone.js": "^0.8.26"
   },
