--- a/package.json
+++ b/package.json
@@ -22,37 +22,39 @@
     "build:lib": "npm install projects/ngx-hotkeys && ng build ngx-hotkeys"
   },
   "dependencies": {
-    "@angular/animations": "^7.0.0",
-    "@angular/common": "^7.0.0",
-    "@angular/compiler": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "@angular/forms": "^7.0.0",
-    "@angular/http": "^7.0.0",
-    "@angular/platform-browser": "^7.0.0",
-    "@angular/platform-browser-dynamic": "^7.0.0",
-    "@angular/router": "^7.0.0",
-    "@angular/service-worker": "^7.0.0",
+    "@angular/animations": "^7.1.2",
+    "@angular/common": "^7.1.2",
+    "@angular/compiler": "^7.1.2",
+    "@angular/core": "^7.1.2",
+    "@angular/forms": "^7.1.2",
+    "@angular/http": "^7.1.2",
+    "@angular/platform-browser": "^7.1.2",
+    "@angular/platform-browser-dynamic": "^7.1.2",
+    "@angular/router": "^7.1.2",
+    "@angular/service-worker": "^7.1.2",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/entity": "^6.1.2",
     "@ngrx/store": "^6.1.2",
     "@ngx-pwa/local-storage": "^6.2.0",
     "@ngx-pwa/offline": "^6.1.0",
-    "@ngx-translate/core": "^10.0.1",
+    "@ngx-shortcuts/hotkeys": "file:projects/ngx-hotkeys",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.6",
     "lodash": "^4.17.10",
-    "ngx-hotkeys": "file:projects/ngx-hotkeys",
     "rxjs": "^6.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.2",
     "@angular-devkit/build-ng-packagr": "~0.10.0",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "^7.0.0",
-    "@angular/language-service": "^7.0.0",
+    "@angular-devkit/core": "^7.1.2",
+    "@angular/cli": "~7.1.2",
+    "@angular/compiler-cli": "^7.1.2",
+    "@angular/language-service": "^7.1.2",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@ngrx/store-devtools": "^6.1.2",
     "@ngx-rocket/scripts": "^3.0.0",
@@ -74,7 +76,7 @@
     "karma-jasmine": "^1.1.2",
     "karma-junit-reporter": "^1.2.0",
     "ng-packagr": "^4.2.0",
-    "prettier": "^1.14.0",
+    "prettier": "^1.15.3",
     "pretty-quick": "^1.6.0",
     "protractor": "~5.4.0",
     "puppeteer": "^1.4.0",
