--- a/projects/ngx-hotkeys/package.json
+++ b/projects/ngx-hotkeys/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ngx-hotkeys",
-  "version": "1.0.1",
+  "name": "@ngx-shortcuts/hotkeys",
+  "version": "2.1.1",
   "peerDependencies": {
-    "@angular/common": "^7.0.0 || ^6.0.0-rc.0 || ^6.0.0",
-    "@angular/core": "^7.0.0 || ^6.0.0-rc.0 || ^6.0.0"
+    "@angular/common": "^7.1.2 || ^6.1.2",
+    "@angular/core": "^7.1.2 || ^6.1.2"
   },
   "devDependencies": {
     "mousetrap": "^1.6.2",
