--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,29 +10,14 @@
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
     "baseUrl": "src",
     "paths": {
-      "@app/*": [
-        "app/*"
-      ],
-      "@env/*": [
-        "environments/*"
-      ],
-      "ngx-hotkeys": [
-        "distPack/ngx-hotkeys"
-      ]
+      "@app/*": ["app/*"],
+      "@env/*": ["environments/*"],
+      "ngx-hotkeys": ["distPack/ngx-hotkeys"]
     }
   },
-  "exclude": [
-    "dist",
-    "distPack",
-    "node_modules"
-  ]
+  "exclude": ["dist", "distPack"]
 }
