--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng-x-learns",
-  "version": "1.0.1-beta1",
+  "name": "ng-x-architecture-starter-seed",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "ng": "ng",
@@ -17,7 +17,7 @@
     "prettier": "prettier --write \"./{src,e2e}/**/*.{ts,js,scss}\"",
     "prettier:check": "prettier --list-different \"./{src,e2e}/**/*.{ts,js,scss}\"",
     "postinstall": "npm run prettier -s",
-    "precommit": "pretty-quick --staged",
+    "precommit": "pretty-quick -- staged",
     "generate": "ng generate",
     "build:lib": "npm install projects/ngx-hotkeys && ng build ngx-hotkeys"
   },
@@ -62,7 +62,7 @@
     "@types/jasminewd2": "^2.0.2",
     "@types/lodash": "^4.14.108",
     "@types/node": "^8.10.13",
-    "codelyzer": "^4.4.4",
+    "codelyzer": "^4.5.0",
     "hads": "^1.7.0",
     "htmlhint": "^0.10.0",
     "https-proxy-agent": "^2.0.0",
@@ -80,7 +80,7 @@
     "pretty-quick": "^1.6.0",
     "protractor": "~5.4.0",
     "puppeteer": "^1.4.0",
-    "stylelint": "~9.6.0",
+    "stylelint": "~9.9.0",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-recommended-scss": "~3.2.0",
     "stylelint-config-standard": "~18.2.0",
